# qf-solochain

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  .taplo.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  Cargo.lock.b  Cargo.lock.bb  Cargo.toml  INSTALL.md  Makefile  PARACHAIN.md  README.md  SECURITY.md  SPIN.md  rust-toolchain.toml  zombienet.toml
.github/workflows/: build-manual-complete.yml  build.yml  checks.yml  on-demand-sender.yml  release.yml  srtool.yml
bridge/spin-bridge/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
bridge/spin-bridge/src/: index.ts
chain-specs/: genesis-state-2000  genesis-wasm-2000  parachain-spec-builder-raw.json  parachain-spec-builder.json  relaychain-spec-raw.json  relaychain-spec.json
client/consensus-spin/: Cargo.toml  README.md  secondary_leader.md
client/relay-spin/: Cargo.toml  README.md
client/relay-spin/src/: bridge.rs  chain_schema.rs  cli.rs  fastchain_headers_to_slowchain_parachain.rs  lib.rs
client/relay-spin/src/client_fastchain/: mod.rs
client/relay-spin/src/client_slowchain/: mod.rs
client/relayer-spin/: Cargo.toml
client/relayer-spin/src/: main.rs
crates/spin-consensus/: Cargo.toml  README.md
crates/spin-primitives/: Cargo.toml  README.md
docker/: Dockerfile.arm64  Dockerfile.dev  Dockerfile.qfnode  Dockerfile.x86_64  Dockerfile.x86_64-parachain  Dockerfile.x86_64_complete  Dockerfile.x86_64_testing  README.md  qf-node-start.sh
docs/: executables_and_runtimes.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/res/: qf-devnet.plain.json  qf-local-para.plain.json  qf-local-para.raw.json  qf-local.plain.json  qf-local.raw.json  qf-mainnet-para.plain.json  qf-mainnet-para.raw.json  qf-mainnet.plain.json  qf-mainnet.raw.json  qf-testnet-para.plain.json  qf-testnet-para.raw.json  qf-testnet.plain.json  qf-testnet.raw.json
pallets/anchor/: Cargo.toml
pallets/claim/: Cargo.toml  README.md
pallets/claim/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/faucet/: Cargo.toml
pallets/on-demand/: README.md
pallets/qf-polkavm/: Cargo.toml
pallets/qf-polkavm-dev/: Cargo.toml
pallets/qf-polkavm-dev/src/: exec.rs  lib.rs  xcq.rs
pallets/qf-polkavm-dev/src/polkavm/: api.rs  bit_mask.rs  compiler.rs  generic_allocator.rs  interpreter.rs  linker.rs  mod.rs  module_cache.rs  page_set.rs  sandbox.rs  shm_allocator.rs  tests.rs  utils.rs
pallets/qf-polkavm-dev/src/polkavm/compiler/: amd64.rs
pallets/qf-polkavm-dev/src/polkavm/polkavm/: mod.rs
pallets/qf-polkavm-dev/src/polkavm/polkavm/src/: linker.rs
pallets/qf-polkavm-dev/src/polkavm/sandbox/: linux.rs
pallets/qf-polkavm/src/: lib.rs  mock.rs  tests.rs
pallets/qf-polkavm/src/polkavm/: api.rs  bit_mask.rs  compiler.rs  config.rs  error.rs  gas.rs  generic_allocator.rs  interpreter.rs  linker.rs  linker.rs.b  linker2.rs  mod.rs  module_cache.rs  mutex_no_std.rs  mutex_std.rs  sandbox.rs  shm_allocator.rs  source_cache.rs  tests.rs  utils.rs
pallets/qf-polkavm/src/polkavm/compiler/: amd64.rs
pallets/qf-polkavm/src/polkavm/sandbox/: generic.rs  linux.rs
pallets/qf-polkavm/src/seeds/: hello-qf-polkavm.polkavm
pallets/spin/: Cargo.toml  README.md
pallets/spin-anchoring/: Cargo.toml  README.md
pallets/spin-anchoring/src/: lib.rs
pallets/spin-polkadot/: Cargo.toml  README.md
pallets/spin-polkadot/src/: lib.rs  storage_types.rs
parachain/: README.md  zombienet-omni-node.toml  zombienet.toml
parachain/node/: Cargo.toml  README.md
parachain/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  fast_command.rs  fast_service.rs  main.rs  rpc.rs  service.rs
parachain/on-demand-sender/: .env.example  Dockerfile  README.md  docker-compose.yml  index.js  package-lock.json  package.json
parachain/runtime/: Cargo.toml
primitives/consensus-spin/: Cargo.toml  README.md
pvm-test-runner/: Cargo.toml
pvm-test-runner/src/: main.rs
pvm_prog/: Cargo.toml
pvm_prog/.cargo/: config.toml
pvm_prog/sum-balance/: Cargo.toml
qf-test-runner/src/: main.rs
relayer/spin-finality-relayer/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
runtime/: Cargo.toml
runtime/src/: apis.rs  aura_session.rs  lib.rs
runtimes/parachain/: Cargo.toml  README.md
runtimes/parachain/node/: Cargo.toml
runtimes/qf-runtime/: Cargo.toml  README.md
runtimes/qf-runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtimes/qf-runtime/src/configs/: bag_thresholds.rs  mod.rs
runtimes/qf-runtime/src/migrations/: mod.rs  pallet_staking_voterlist_migration.rs
runtimes/qf-runtime/src/weights/: mod.rs  pallet_assets.rs  pallet_bags_list.rs  pallet_claims.rs  pallet_staking.rs
runtimes/qf-testnet-runtime/: Cargo.toml  README.md
runtimes/solochain/: Cargo.toml
scripts/: README.md  net-check.sh  prepare-fastchain.sh  prepare-parachain.sh  prepare-parathread-raw.sh  prepare-parathread.sh  prepare-relaychain.sh  start-fast-full.sh  start-fast-validator-1.sh  start-fast-validator-2.sh  start-para-collator-1.sh  start-para-collator-2.sh  start-para-full.sh  start-parafast-collator-1.sh  start-parafast-collator-2.sh  start-relay-full-c1.sh  start-relay-full-c2.sh  start-relay-full-c3.sh  start-relay-full.sh
scripts/local-deployment/: prepare-parachain.sh  prepare-relaychain.sh  start-fast-validator-1.sh  start-para-collator-1.sh  start-relay-full.sh
test-utils/: Cargo.toml
test-utils/cli/: Cargo.toml
test-utils/client/: Cargo.toml
test-utils/runtime/: Cargo.toml
utils/runtime-generate-bags/: Cargo.toml
utils/runtime-generate-bags/src/: README.md  main.rs
xcq-api/: Cargo.toml
xcq-api/procedural/: Cargo.toml
xcq-executor/: Cargo.toml
xcq-extension/: Cargo.toml
xcq-extension-core/: Cargo.toml
xcq-extension-fungibles/src/: lib.rs
xcq-extension/tests/: with_associated_types_works.rs
xcq-primitives/: Cargo.toml
xcq-primitives/src/: lib.rs
xcq-types/: Cargo.toml
zombienet/: README.md
zombienet/spin/: spin.toml
(+63 files in other folders)
